Fix codemaster dark mode colours when game ends (#92)
* Neutral colour for codemaster in dark mode when game won

Fixed colour to be #aaa instead of changing to blue or red

* Fixed CODENAMES colour in dark mode

Set to #888 same as other text

--- a/frontend/game.css
+++ b/frontend/game.css
@@ -182,6 +182,9 @@
 .player .board.win > .cell.black.hidden-word {
   background: rgba(153, 153, 153, 0.4);
 }
+.dark-mode  .codemaster .board.win > .cell.neutral{
+  color: #aaa;
+}
 
 #remaining span {
   display: inline-block;
